public/css/style.css
.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, .1);
    border-color: rgba(255, 255, 255, .1);
}

.back-image{
    background-image: url("../img/fond1.jpg");
}

.btn-outline-orange{
    color: #DF691A;
    background-color: transparent;
    background-image: none;
    border-color: #DF691A;
}

.btn-outline-orange:hover{
    color: #fff;
    background-color: #DF691A;
    border-color: #DF691A;
}

.btn-orange{
    color: #fff;
    background-color: #DF691A;
    border-color: #DF691A;
}

.btn-orange:hover {
    color: #fff;
    background-color: #bd5916;
    border-color: #b15315;
}

.bg-orange{
    background-color: #DF691A;
}

.center{
    color: #DF691A;
    margin-top: 18rem;
    margin-left: auto;
    margin-right: auto;
    width: 40rem;
    font-size: 2rem;
}

.center-btn{
    font-size: 1.2rem;
}

/* WIDTH */
.w-100{
    width: 100%;
}

.orange {
    color: #DF691A;
}

.orange:hover {
    color: #000;
    text-decoration: none;
}

.titleFont{
    color: #DF691A;
    font-family: 'Permanent Marker', cursive;
}

.card-body > h3{
    font-family: 'Audiowide', cursive;
}

.titleOrange {
    color: #DF691A;
    font-family: 'Permanent Marker', cursive;
}

.titleForm{
    color: #DF691A;
    font-family: 'Permanent Marker', cursive;
}

.titleOrange:hover{
    color: #343a40;
    text-decoration: none;
}

.thumbnail-title{
    font-size: 95%;
    width: 260px;
}

.ss-titre{
    color: #343a40;
}
.lien {
    color: #343a40;
}

.lien:hover{
    color: #DF691A;
    text-decoration: none;
}

.sizeimg{
    width: 200px;
    height: 150px;
}

.twitch-sidebar-link{
    text-decoration: none;
    color: black;
}

.twitch-sidebar-link:hover{
    text-decoration: none;
    color: rgb(27, 27, 27);
}

.cookie_bar{
    background: rgba(0,0,0,0.7);
    bottom: 0;
    color: #fff;
    left: 0;
    right: 0;
    font-size: 0.9rem;
    padding: 5px;
    position: fixed;
    text-align: center;
    z-index: 1600;
    line-height: 1.5rem;
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
}
#cookie_bar > a {
    color: #DF691A;
    font-family: Arial;
}

#cookie_bar > a:hover{
    color: #5eb5e0;
    text-decoration: none;
}

.cookie_btn{
    background: #f1f1f1 none repeat scroll 0 0;
    border: medium none;
    border-radius: 2px;
    padding: 2px 8px;
    color: #000;
    margin: 5px;
    font-size: 0.9rem;
}

main{
    z-index: 0;
}

.burger{display: none;}

.nav-burger{
    z-index:1;
    display: none;
    z-index: 1;
}

.alert-orange {
    color: #000;
    background-color: #DF691A;
    border-color: #c6c8ca;
    opacity: 0.8;
}


/**** Style de la div de recherche ***/
.searchDiv{
    z-index: 1;
    width: 67%;
    top: 60px;
    position: absolute;
    text-align: left;
    right: 270px;
    color: #DF691A;
}
.w-66{
    width: 66%!important;
}
.isize{
    font-size: 1.8rem!important;
    color: #DF691A;
    right:5.3rem;
    position: relative;
}

.list-group-item{
    background: #494e53;
    color: white;
    border-color: #DF691A;
}
/**** Fin de la div de recherche ***/

.link-no-style{
    color: black;
    text-decoration: none;
}

.w-260{
    width: 260px;
}

.h-150{
    height: 150px;
}

/* Page ajax twitch */
.center-on-img{
    position: relative;
    top: -28px;
}

.miniature{
    width: 310px;
    height: 210px;
}

/* NAV BAR */
/* Scrollbar des abonnements Twitch */
.scrollbar {
    padding-right: 10px; 
    max-height: 160px;
    margin-bottom: 25px;
    margin-left: 22px;
    margin-top: 40px;
    overflow-y: scroll;
    overflow-x: hidden; 
}

#twitch-scrollbar::-webkit-scrollbar{
    width: 10px;
}

#twitch-scrollbar::-webkit-scrollbar-thumb {
	border-radius: 10px;
	background-color: #555;
}

#twitch-scrollbar::-webkit-scrollbar-track {
	border-radius: 10px;
	background-color: #d3d3d3;
}

.text-muted-bis{
    color: #6c757d;
}

a#offline-users-dropdown{
    text-decoration: none !important;
}

a#youtube-users-dropdown{
    text-decoration: none !important;
}

h6.d-inline.sidebar-heading.d-flex.justify-content-start.align-items-center.px-3.mt-4.mb-3.text-muted-bis:hover{
    color: black;
}

a#online-users-dropdown{
    text-decoration: none !important;
}

body{
    height: 100%;
}

#menu-principal{
    position: fixed;
    min-width: 290px;
    z-index: 1029;
    overflow-y: scroll;
}

#menu-principal::-webkit-scrollbar{
    width: 5px;
}

#menu-principal::-webkit-scrollbar-thumb {
    width: 5px;
    border-radius: 10px;
    background-color: #7d7d7d;
}

#menu-principal::-webkit-scrollbar-track {
    width: 5px;
    background-color:#d3d3d3;
}

.dropdown-icon{
    position: relative;
    left: 10px;
    top: 2px;
}

/*Chat*/
    /* Chat Scrollbar */

#result-chat{
    padding-right: 5px;
}

#result-chat::-webkit-scrollbar{
    width: 10px;
}

#result-chat::-webkit-scrollbar-thumb {
    width: 10px;
    border-radius: 10px;
    background-color: #555;
}

#result-chat::-webkit-scrollbar-track {
    width: 10px;
    border-radius: 10px;
    background-color: #bfbfbf;
}

    /* Fin scrollbar */
body{
    position: relative;
}

.chat {
    position: fixed;
    left: 80%;
    bottom: 0;
    font-size: 18px;
    z-index: 2000;
}

.mytext{
    border:0;
    padding:10px;
    background:whitesmoke;
}
.text{
    width:75%;
    display:flex;
    flex-direction:column;
}
.text > p:first-of-type{
    width:100%;
    margin-top:0;
    margin-bottom:auto;
    line-height: 13px;
    font-size: 12px;
}
.text > p:last-of-type{
    width:100%;
    text-align:right;
    color:silver;
    margin-bottom:-7px;
    margin-top:auto;
}
.text-l{
    float:left;
    padding-right:10px;
}
.text-r{
    float:right;
    padding-left:10px;
}
.avatar{
    display:flex;
    justify-content:center;
    align-items:center;
    width:25%;
    float:left;
    padding-right:10px;
}
.macro{
    margin-top:5px;
    width:85%;
    border-radius:5px;
    padding:5px;
    display:flex;
}
.msj-rta{
    float:right;
    background:whitesmoke;
}
.msj{
    float:left;
    background:white;
}
.frame{
    background:#e0e0de;
    height:450px;
    overflow:hidden;
    padding:0;
    width: 1500px;
}
.frame > div:last-of-type{
    position:absolute;
    bottom:0;
    width:100%;
    display:flex;
}
body > div > div > div:nth-child(2) > span{
    background: whitesmoke;
    padding: 10px;
    font-size: 21px;
    border-radius: 50%;
}
body > div > div > div.msj-rta.macro{
    margin:auto;
    margin-left:1%;
}
.ul-chat {
    width:100%;
    list-style-type: none;
    padding:18px;
    position:absolute;
    bottom:47px;
    display:flex;
    flex-direction: column;
    top:0;
    overflow-y:scroll;
    overflow-x: hidden;
}
.msj:before{
    width: 0;
    height: 0;
    content:"";
    top:-5px;
    left:-14px;
    position:relative;
    border-style: solid;
    border-width: 0 13px 13px 0;
    border-color: transparent #ffffff transparent transparent;
}
.msj-rta:after{
    width: 0;
    height: 0;
    content:"";
    top:-5px;
    left:14px;
    position:relative;
    border-style: solid;
    border-width: 13px 13px 0 0;
    border-color: whitesmoke transparent transparent transparent;
}
input:focus{
    outline: none;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: #d4d4d4;
}
::-moz-placeholder { /* Firefox 19+ */
    color: #d4d4d4;
}
:-ms-input-placeholder { /* IE 10+ */
    color: #d4d4d4;
}
:-moz-placeholder { /* Firefox 18- */
    color: #d4d4d4;
}

#toggle-chat{
    border-radius: .25rem .25rem 0 0;
    overflow: hidden;
}
/*Fin Chat*/

/*Effet sur image*/
@font-face{font-weight:normal;font-style:normal;font-family:'feathericons';src:url('../fonts/feathericons/feathericons.eot?-8is7zf');src:url('../fonts/feathericons/feathericons.eot?#iefix-8is7zf') format('embedded-opentype'),url('../fonts/feathericons/feathericons.woff?-8is7zf') format('woff'),url('../fonts/feathericons/feathericons.ttf?-8is7zf') format('truetype'),url('../fonts/feathericons/feathericons.svg?-8is7zf#feathericons') format('svg')}
*, *:after, *:before {box-sizing: border-box;}
.grid{position:relative;margin:0 auto;padding:1em 0 0;max-width:1000px;list-style:none;text-align:center}
.grid figure{position:relative;float:left;overflow:hidden;margin:10px 1%;min-width:260px;max-width:480px;max-height:360px;width:48%;background:#3085a3;text-align:center;cursor:pointer}
.grid figure img{position:relative;display:block;min-height:100%;max-width:100%;opacity:.8}
.grid figure figcaption{padding:2em;color:#fff;text-transform:uppercase;font-size:1.25em;-webkit-backface-visibility:hidden;backface-visibility:hidden}
.grid figure figcaption::before,.grid figure figcaption::after{pointer-events:none}
.grid figure figcaption,.grid figure figcaption>a{position:absolute;top:0;left:0;width:100%;height:100%}
.grid figure figcaption>a{z-index:1000;text-indent:200%;white-space:nowrap;font-size:0;opacity:0}
.grid figure h2{word-spacing:-0.15em;font-weight:300}
.grid figure h2 span{font-weight:800}
.grid figure h2,.grid figure p{margin:0}
.grid figure p{letter-spacing:1px;font-size:68.5%}
@media screen and (max-width:50em){
    .grid figure{display:inline-block;float:none;margin:10px auto;width:100%}
}

figure.effect-duke{background:-webkit-linear-gradient(-45deg,#34495e 0,#cc6055 100%);background:linear-gradient(-45deg,#34495e 0,#cc6055 100%)}
figure.effect-duke img,figure.effect-duke p{-webkit-transition:opacity .35s,-webkit-transform .35s;transition:opacity .35s,transform .35s}
figure.effect-duke:hover img{opacity:.1;-webkit-transform:scale3d(2,2,1);transform:scale3d(2,2,1)}
figure.effect-duke h2{-webkit-transition:-webkit-transform .35s;transition:transform .35s;-webkit-transform:scale3d(0.8,0.8,1);transform:scale3d(0.8,0.8,1);-webkit-transform-origin:50% 100%;transform-origin:50% 100%}
figure.effect-duke p{position:absolute;bottom:0;left:0;margin:20px;padding:20px;border:2px solid #fff;text-transform:none;font-size:80%;opacity:0;-webkit-transform:scale3d(0.8,0.8,1);transform:scale3d(0.8,0.8,1);-webkit-transform-origin:50% -100%;transform-origin:50% -100%}
figure.effect-duke:hover h2,figure.effect-duke:hover p{opacity:1;-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}
/*Fin effet*/

@media (min-width: 577px){
    #menu-principal{
        display: block !important;
    }

    .large-screen-hide{
        display: none;
    }
}

@media (max-width: 576px){
    /*On cache le menu et on fait apparaitre l'icone burger */
    #menu-principal{
        display: none;
        position: relative;
        min-height: 200px;
        overflow: hidden;
    }
    header{
        display: none;
    }
    .burger{display: block;}
    .burger svg{cursor: pointer;}
    .burger svg:hover .nav-burger{
        display: block;
    }
    #svg-burger{
        float: left;
    }
    .nav-burger, .nav-burger ul{
        float: left;
        width: 100%;
    }
    .nav-burger ul{text-align: left;}
    .nav-burger ul li{
        display: block;
        float: left;
        width: 100%;
    }
    .nav-burger a{
        border: none;
        padding: 10px;
        font-size: 1.2rem;
    }

    .margin-burger{
        margin-top: 0px !important;
    }
 
    .chat{
        display: none;
    }
}

